--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.4.1",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,8 +39,8 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
-    "babel-loader": "^8.0.5",
-    "node-sass": "^4.11.0"
+    "babel-loader": "^8.1.0",
+    "node-sass": "^4.14.1"
   },
   "jest": {
     "watchPathIgnorePatterns": [
