--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "proxy": "http://localhost:8001",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.1",
     "webpack": "^4.42.0"
@@ -41,8 +41,10 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^3.3.0",
     "babel-loader": "^8.1.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "watchPathIgnorePatterns": [
